bug: Fixed css issue of google maps not showing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,12 @@ body {
 }
 
 
+.map-container {
+  height: 100vh;
+}
+
+
 //noinspection Stylelint
 #map {
-  max-height: 100%;
+  height: 100%;
 }
